{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 365,
  "lineage": "df345324-8395-657e-6eec-a60f3f7053b8",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:142939271009:loadbalancer/app/next-go-project-ALB-dev/8e88f1262ded86e5",
            "arn_suffix": "app/next-go-project-ALB-dev/8e88f1262ded86e5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "next-go-project-ALB-dev-965892836.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:142939271009:loadbalancer/app/next-go-project-ALB-dev/8e88f1262ded86e5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "next-go-project-ALB-dev",
            "preserve_host_header": false,
            "region": "eu-west-1",
            "security_groups": [
              "sg-07d8b1059f4f027f7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0412743f4d47091aa"
              },
              {
                "subnet_id": "subnet-0d96539909d0cd63d"
              }
            ],
            "subnets": [
              "subnet-0412743f4d47091aa",
              "subnet-0d96539909d0cd63d"
            ],
            "tags": {
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e41c49bbc9c4a8a0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:142939271009:loadbalancer/app/next-go-project-ALB-dev/8e88f1262ded86e5"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "service_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:142939271009:targetgroup/next-go-project-TargetGroup-dev/e8df98af8ad96532",
            "arn_suffix": "targetgroup/next-go-project-TargetGroup-dev/e8df98af8ad96532",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:142939271009:targetgroup/next-go-project-TargetGroup-dev/e8df98af8ad96532",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "next-go-project-TargetGroup-dev",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_alb.alb",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:142939271009:listener/app/next-go-project-ALB-dev/8e88f1262ded86e5/6b17fce9594ad1ce",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:142939271009:targetgroup/next-go-project-TargetGroup-dev/e8df98af8ad96532",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:142939271009:listener/app/next-go-project-ALB-dev/8e88f1262ded86e5/6b17fce9594ad1ce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:142939271009:loadbalancer/app/next-go-project-ALB-dev/8e88f1262ded86e5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "Project": "next-go-project"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_alb.alb",
            "module.alb.aws_alb_target_group.service_target_group",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:security-group/sg-07d8b1059f4f027f7",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-07d8b1059f4f027f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http inbound traffic from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https inbound traffic from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              }
            ],
            "name": "next-go-project_alb_sg_dev",
            "name_prefix": "",
            "owner_id": "142939271009",
            "region": "eu-west-1",
            "revoke_rules_on_delete": true,
            "tags": {
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:internet-gateway/igw-029b56ff52d2aa646",
            "id": "igw-029b56ff52d2aa646",
            "owner_id": "142939271009",
            "region": "eu-west-1",
            "tags": {
              "Name": "igw_prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "igw_prod",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway-instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f22410f9ffd69c07",
            "arn": "arn:aws:ec2:eu-west-1:142939271009:elastic-ip/eipalloc-0f22410f9ffd69c07",
            "domain": "vpc",
            "id": "eipalloc-0f22410f9ffd69c07",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-73-24-83.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.73.24.83",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "self-managed-nat-ec2-instance-eip",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "self-managed-nat-ec2-instance-eip",
              "Project": "next-go-project",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.natgateway-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b88017a001daa210",
            "arn": "arn:aws:ec2:eu-west-1:142939271009:instance/i-0e31dd0df0d8e3fc8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e31dd0df0d8e3fc8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "petza-ssh-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-093278cc738ffac8c",
            "private_dns": "ip-172-17-18-116.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.17.18.116",
            "public_dns": "ec2-34-245-7-163.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.7.163",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "prod",
                  "Project": "next-go-project"
                },
                "tags_all": {
                  "Environment": "prod",
                  "Project": "next-go-project"
                },
                "throughput": 125,
                "volume_id": "vol-030e314db5232e04a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0412743f4d47091aa",
            "tags": {
              "Environment": "dev",
              "Name": "self-managed-nat-ec2-instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "self-managed-nat-ec2-instance",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0907939765374d833"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.natgateway-instance.aws_security_group.nat_ec2_sg",
            "module.natgateway-instance.data.aws_ami.latest_amazon_linux",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway-instance",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_ec2_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01b2af47f92c0794d1080289494",
            "instance_id": "i-0e31dd0df0d8e3fc8",
            "instance_owner_id": "142939271009",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-093278cc738ffac8c",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-01b2af47f92c0794d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.natgateway-instance.aws_instance.nat_ec2_instance",
            "module.natgateway-instance.aws_security_group.nat_ec2_sg",
            "module.natgateway-instance.data.aws_ami.latest_amazon_linux",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway-instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:security-group/sg-0907939765374d833",
            "description": "Security group of Self-Managed NAT EC2 Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0907939765374d833",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.17.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.17.0.0/16"
                ],
                "description": "Allow all TCP traffic from VPC CIDR",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "self-managed-nat-ec2-sg",
            "name_prefix": "",
            "owner_id": "142939271009",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "self-managed-nat-ec2-instance-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "self-managed-nat-ec2-instance-sg",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:security-group/sg-0e226508f88c47a50",
            "description": "enable postgre access on port 5432",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0e226508f88c47a50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0907939765374d833",
                  "sg-09c8862d96c3a26c6"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "142939271009",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.natgateway-instance.aws_security_group.nat_ec2_sg",
            "module.security-groups.aws_security_group.ecs_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:security-group/sg-09c8862d96c3a26c6",
            "description": "Security group for ECS task running on Fargate",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from ECS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-09c8862d96c3a26c6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ingress traffic from ALB on HTTP only",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07d8b1059f4f027f7"
                ],
                "self": true,
                "to_port": 4000
              }
            ],
            "name": "next-go-project_ecs_sg_prod",
            "name_prefix": "",
            "owner_id": "142939271009",
            "region": "eu-west-1",
            "revoke_rules_on_delete": true,
            "tags": null,
            "tags_all": {
              "Environment": "prod",
              "Project": "next-go-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "public_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d22aefc68fdb14d",
            "original_route_table_id": "rtb-078832bf455d7165b",
            "region": "eu-west-1",
            "route_table_id": "rtb-067db560f5b590fe7",
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.natgateway.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:route-table/rtb-01b2af47f92c0794d",
            "id": "rtb-01b2af47f92c0794d",
            "owner_id": "142939271009",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Name": "private_route_table_0_prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "private_route_table_0_prod",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:route-table/rtb-012535f91c37b4e8b",
            "id": "rtb-012535f91c37b4e8b",
            "owner_id": "142939271009",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Name": "private_route_table_1_prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "private_route_table_1_prod",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:route-table/rtb-067db560f5b590fe7",
            "id": "rtb-067db560f5b590fe7",
            "owner_id": "142939271009",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-029b56ff52d2aa646",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table_prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "public_route_table_prod",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.natgateway.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d3328c5486d92ee",
            "region": "eu-west-1",
            "route_table_id": "rtb-01b2af47f92c0794d",
            "subnet_id": "subnet-0a217fec5746cad01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1711d0d792d687b",
            "region": "eu-west-1",
            "route_table_id": "rtb-012535f91c37b4e8b",
            "subnet_id": "subnet-0e450203b50361514"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025d87f0c5e687065",
            "region": "eu-west-1",
            "route_table_id": "rtb-067db560f5b590fe7",
            "subnet_id": "subnet-0412743f4d47091aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.natgateway.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0399faef590e91983",
            "region": "eu-west-1",
            "route_table_id": "rtb-067db560f5b590fe7",
            "subnet_id": "subnet-0d96539909d0cd63d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.natgateway.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:subnet/subnet-0a217fec5746cad01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.17.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a217fec5746cad01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "142939271009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "private_subnet_0_prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "private_subnet_0_prod",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:subnet/subnet-0e450203b50361514",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.17.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e450203b50361514",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "142939271009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "private_subnet_1_prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "private_subnet_1_prod",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:subnet/subnet-0412743f4d47091aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.17.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0412743f4d47091aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "142939271009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "public_subnet_0_prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "public_subnet_0_prod",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:subnet/subnet-0d96539909d0cd63d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.17.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d96539909d0cd63d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "142939271009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "public_subnet_1_prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "public_subnet_1_prod",
              "Project": "next-go-project",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e41c49bbc9c4a8a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:vpc/vpc-0e41c49bbc9c4a8a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0abfb666c5cde274f",
            "default_route_table_id": "rtb-078832bf455d7165b",
            "default_security_group_id": "sg-053c5edcda7654ab9",
            "dhcp_options_id": "dopt-011b792029a0b4694",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e41c49bbc9c4a8a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078832bf455d7165b",
            "owner_id": "142939271009",
            "region": "eu-west-1",
            "tags": {
              "Name": "MainVPC_prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "MainVPC_prod",
              "Project": "next-go-project",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}